--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
           <button id="b" type="submit" name="vote" class="b" value="b">{{option_b}}</button>
         </form>
         <div id="tip">
-          (Tip: you better not change your vote)
+          (Tip: you can change your vote anytime.)
         </div>
         <div id="result">
 
